# mktcrypto

./: .env.example  .gitignore  Caddyfile  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  package-lock.json  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 5caed2bbf583_initial_migration.py
backend/app/: database.py  main.py  models.py  redis_client.py
backend/app/models/: market_card.py
cards_design/stitch/stitch/market_card_base_state/: code.html
cards_design/stitch/stitch/market_card_loading_state/: code.html
cards_design/stitch/stitch/market_card_payment_overlay/: code.html
cards_design/stitch/stitch/market_card_success_state/: code.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: GenericMarketCard.jsx  SuccessModal.jsx  polymarket-styles.css
