[tool.poetry]
name = "market-cards-backend"
version = "0.1.0"
description = "Backend for Lumina Market Cards - Lego Architecture"
authors = ["Architect <architect@lumina.dev>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
pydantic = "^2.5.0"
sse-starlette = "^1.8.2"
# --- PIEZAS CRÍTICAS PARA LUMINA ---
httpx = "^0.25.1"           # Para hablar con la API de Alby
cryptography = "^41.0.5"    # Para el AES-256 de los payloads
python-jose = {extras = ["cryptography"], version = "^3.3.0"} # Para JWT/Auth
python-multipart = "^0.0.6" # Para recibir logins de formularios

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
